UI와 미완성 부분을 Claude Code를 통해 구현